
Change Log for Kicad
Started 2007-June-11

Please add newer entries at the top, list the date and your name with
email address.


2008-Mar-17 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+pcbnew
  * Fixed a crashing bug which occured when you run the module editor, select
    "Update module in current board" and then run the DRC checker after that.
  * Changed to void CreateSortedPadListByXCoord( BOARD* aBoard, std::vector<D_PAD*>* aVector )
    So caller can safely forget to delete the array of pad pointers and the vector's
    destructor handles this automatically.
  * Delete pad from within PCBNEW, not module editor, now uses PostDirtyRect()


2008-Mar-14 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+eeschema
  * cleaned up some xor artifacts, see eeschema/getpart.cpp's comment:
    // switch from normal mode to xor mode for the duration of the move, first
    // by erasing fully any "normal drawing mode" primitives with the PostDirtyRect(),
    // then by drawing the first time in xor mode so that subsequent xor
    // drawing will fully erase this first copy and then the previous copy.
  * redraw the entire screen at end of a component move.
  * added many calls to Refresh() to eeschema/onleftclick.cpp and in such cases
    I now pass a NULL DC to TestDanglingEnds()


2008-Mar-14 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
    some code cleaning and comment translations.
    added:
    /** EDA_Rect::Merge( EDA_Rect & aRect )
     * Modify Position and Size of this in order to contains the given rect
     * mainly used to calculate bouding boxes
     * @param aRect = given rect to merge with this
     */


2008-Mar-14 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>