@@ -3,16 +3,13 @@ if(ZLIB_FOUND)
     message(STATUS "Check for installed zlib -- found")
 else(ZLIB_FOUND)
     message(STATUS "Check for installed zlib -- not found")
-    if(NOT MINGW)
-        message(FATAL_ERROR
-                 "zlib was not found - it is required to build KiCad")
-    else(NOT MINGW)
-        # zlib is not installed, and in this case wxWidgets creates its own zlib library
-        # include files are in ${wxWidgets_ROOT_DIR}/src/zlib
-        # and the corresponding library is libwxzlib-<version>.a (like libwxzlib-2.8.a)
-        # and we try to use it
-        include_directories(${wxWidgets_ROOT_DIR}/src/zlib)
-    endif(NOT MINGW)
+    message(STATUS "Use wxWidgets zlib")
+	# zlib is not installed, and in this case wxWidgets creates its own zlib library
+	# include files are in ${wxWidgets_ROOT_DIR}/src/zlib
+	# and the corresponding library is libwxzlib-<version>.a (like libwxzlib-2.8.a)
+	# and we try to use it
+	INCLUDE_DIRECTORIES( ${wxWidgets_ROOT_DIR}/src/zlib)
+	set(ZLIB_LIBRARIES ${wxWidgets_ROOT_DIR}/lib/libwxzlib-2.8.a)
 endif(ZLIB_FOUND)
 
 set(MINIZIP_SRCS
